# basgit

./: .env.travis  .gitignore  .travis.yml  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Procfile  README.md  build.rs  package.json  watch.sh
ci/: check-basic-style.sh
less/: basket.less  colors.less  common.less  footer.less  form.less  header.less  layout.less  login.less  main.less  new.less  tl.less  userpage.less
migrations/20170429144132_create_users/: up.sql
migrations/20170505221100_create_domain_string/: down.sql  up.sql
migrations/20170505221110_create_users/: down.sql  up.sql
migrations/20170507160834_create_sessions/: up.sql
migrations/20170526075826_create_baskets/: down.sql  up.sql
src/: context.rs  index.rs  login.rs  main.rs  user.rs
src/api/v1/: mod.rs
src/api/v1/repo/: mod.rs
src/db/: mod.rs
src/model/: basket.rs  mod.rs  permissions.rs  repo.rs  session.rs  user.rs  user_email.rs
src/routes/: basket.rs  index.rs  login.rs  mod.rs  new.rs  static.rs  user.rs
static/: main.js
static/facades/: file-browser.js
templates/: base.html.tera  footer.html.tera  header.html.tera  login.html.tera
templates/basket/: base.html.tera  facade.html.tera  settings.html.tera
templates/index/: with_login.html.tera  without_login.html.tera
templates/new/: with_login.html.tera
templates/user/: base.html.tera  base.tera  baskets.html.tera  index.html.tera  macros.html.tera  overview.html.tera  stars.html.tera  tab_bar.html.tera
util/: do-less.sh  watch.sh
