[package]
name = "basgit"
version = "0.1.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]

[profile.dev]
codegen-units = 4

[dependencies]
diesel = { version = "0.11.0", features = ["postgres"] }
diesel_codegen = { version = "0.11.0", features = ["postgres"] }
dotenv = "0.8.0"
r2d2 = "0.7.2"
r2d2-diesel = "0.12.0"
rocket = "0.2.6"
rocket_codegen = "0.2.6"
serde = "0.9"
serde_derive = "0.9"

[dependencies.rocket_contrib]
version = "0.2.6"
features = ["tera_templates"]
