[package]
name = "basgit"
version = "0.1.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]

[profile.dev]
codegen-units = 4

[dependencies]
chrono = { version = "=0.3.0", features = ["serde"] }
diesel = { version = "0.12.0", features = ["postgres", "chrono"] }
diesel_codegen = { version = "0.12.0", features = ["postgres"] }
dotenv = "0.8.0"
hex = { git = "https://github.com/LukasKalbertodt/rust-hex", branch = "bump-030" }
pwhash = "0.1.2"
r2d2 = "0.7.2"
r2d2-diesel = "0.12.0"
rand = "0.3.15"
rocket = "0.2.6"
rocket_codegen = "0.2.6"
serde = "0.9.15"
serde_json = "0.9.10"
serde_derive = "0.9.15"

[dependencies.rocket_contrib]
version = "0.2.6"
features = ["tera_templates"]
